# watchy

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  autowatch-cron  autowatch.py  cleanup.sh  docker-compose.yml  execute.py  pyproject.toml  setup.py
kubernetes/: watchy-deployment.yaml
movie/: folder.py  leet.py  magnet.py  main.py  tmdb.py
requirements/: base.txt  dev.txt  production.txt
serieswatcher/: core.py  eztv_extract.py  tmdb_api_connection.py  tmdb_extract_watchlist.py
tmdb/: authenticate.py
tv/: authenticate.py  extract.py  eztv.py  folder.py  magnet.py  main.py  tmdb.py  watchlist.py
watchy/: eztv.py  folder.py  leet.py  magnet.py  main.py  tmdb.py  yts.py
watchy/tests/: test_folder.py
