[tool.poetry]
name = "watchy"
version = "0.1.0"
description = ""
authors = ["Jean-Frederic Mainville <jfmainville@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
Unidecode = "^1.3.8"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-watcher = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
